--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -51,23 +51,33 @@ a {
     align-items: center;
 }
 
+.hero img {
+    position: absolute;
+    width: 100%;
+    height: 320px;
+    object-fit: cover;
+    filter: brightness(75%);
+}
+
 .hero h1 {
     font-size: 3em;
     text-align: center;
-}
-
-.produits {
-    height: 40rem;
-}
-
-.produits h2 {
-    text-align: center;
-    font-size: 2em;
+    position: relative;
+    text-shadow: 0 0 10px black;
+    color: white;
 }
 
 main {
     background-color: #DCDCDC;
-    display: flex;
+}
+
+.produits {
+    height: 40rem;
+    
+}
+.produits h2 {
+    font-size: 2em;
+    text-align: center;
 }
 
 footer {
